MEC Production/MEC Production/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Accepts_Partial_Order__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Accepts Partial Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Unique_Name__c</fullName>
        <description>This is a hidden field to validate account name uniqueness</description>
        <label>Account Unique Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Accounts_Receivable__c</fullName>
        <label>Accounts Receivable</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_1__c</fullName>
        <label>Area 1</label>
        <picklist>
            <picklistValues>
                <fullName>Province</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area_2__c</fullName>
        <label>Area 2</label>
        <picklist>
            <picklistValues>
                <fullName>Uptown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downtown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area_3__c</fullName>
        <label>Area 3</label>
        <picklist>
            <picklistValues>
                <fullName>Jed 01 : (All areas after Royal Terminal).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 02 : (Al Mohamadiah, Al Nayem &amp;amp; Al Nahda).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 03 : (Al Nozha).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 04 : (Al Salama ,Al Zahra , Al Shatie,Al Rawda &amp;amp; Al Khaledia).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 05 : (Al Safa , Al Marwa, Al Bawadi &amp;amp; Al Faisaliah).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 06 : (Al Rehab , Al Azizia &amp;amp; Mushrefa).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 07 : (Al Hamra , Al Andalus &amp;amp; Al Rowais).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 08 : (Al Naseem , Bani Malik, Al Wrood &amp;amp; Al Sharafia).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 09 : (Eastern Bogdadiah, Al Kandara, Al Suhaifa &amp;amp; Al Amariah).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 10 : (Al Balad &amp;amp; Western Bogdadia).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 11 : (Al Sabeel &amp;amp; Al Hendawiah).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 12 : (Al Sulimaniah &amp;amp; Al Fayha).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 13 : (Al Jamea, Al Thagher, Bin Ladin &amp;amp; Al Wazeeria).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 14 : (Al Nuzlah, Madaen Al Fahad).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 15 : (Al Mahgar, Haraj , Al Senaya &amp;amp; Al Khomra).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kbr 01 : Khobar Downtown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kbr 02 : Khobar Uptown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kbr 03 : Dammam Downtown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kbr 04 : Dammam Khazan St.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kbr 05 : Dammam Uptown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kbr 06 : Jubail Downtown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kbr 07 : Jubail Uptown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kbr 08 : Hassa Downtown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kbr 09 : Hassa Uptown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kbr 10 : Hassa Qatar Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kbr 11 : Qatif</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryd 01: Olaya, Sulimania &amp;amp; Al Mursalat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryd 02: Batha and Murabba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryd 03: Naseem and Nadeem Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryd 04: Badiya, Shifa and Swaidi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Back_Margin__c</fullName>
        <label>Back Margin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCD__c</fullName>
        <label>CCD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CGRP__c</fullName>
        <description>Customer Group</description>
        <label>CGRP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_1__c</fullName>
        <label>Category 1</label>
        <picklist>
            <picklistValues>
                <fullName>BENQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BNP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eloc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hi-Fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WG</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Category_2__c</fullName>
        <label>Category 2</label>
        <picklist>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hi-Fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BNP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eloc</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hi-Fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BNP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eloc</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <label>Channel Type</label>
        <picklist>
            <controllingField>Sales_Channel__c</controllingField>
            <picklistValues>
                <fullName>Power Retailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyper Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modern Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TT Regional Retailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TT Wholesalers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IR Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GD Regional Retailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GD wholesalers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City_Province_Name__c</fullName>
        <label>City/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Province__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Store_Name__c</fullName>
        <label>Client Store Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_name__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Days__c</fullName>
        <label>Credit Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Limit_Status__c</fullName>
        <formula>IF (
 Over_Credit_Limit_Amount__c &gt; 0,
 IMAGE(&quot;/resource/Warning&quot;, &quot;Warning&quot;), 
IMAGE(&quot;/resource/OK&quot;, &quot;Green&quot;) 
)</formula>
        <inlineHelpText>Shows a visual warning if Account over credit limit is &gt;0 otherwise shows OK</inlineHelpText>
        <label>Credit Limit Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Note__c</fullName>
        <label>Credit Note</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <label>Credit Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCHL__c</fullName>
        <label>DCHL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_Lead_Time__c</fullName>
        <inlineHelpText>Enter the Deliver Lead Time (in days)</inlineHelpText>
        <label>Deliver Lead Time (in days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel_Description__c</fullName>
        <formula>IF( Distribution_Channel__c == &apos;10&apos;,&apos;Dealers&apos;,IF( Distribution_Channel__c == &apos;20&apos;,&apos;Retail&apos;,IF( Distribution_Channel__c == &apos;30&apos;,&apos;OM&apos;,IF( Distribution_Channel__c == &apos;40&apos;,&apos;B2B&apos;,IF( Distribution_Channel__c == &apos;90&apos;,&apos;Service Center Sales&apos;,&apos;&apos;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution Channel Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Description__c</fullName>
        <formula>IF( Division__c == &apos;10&apos;,&apos;CAV&apos;, IF( Division__c == &apos;20&apos;,&apos;IT&apos;, IF( Division__c == &apos;30&apos;,&apos;PSX&apos;, IF( Division__c == &apos;40&apos;,&apos;MOB&apos;,IF( Division__c == &apos;50&apos;,&apos;HAP&apos;, IF( Division__c == &apos;60&apos;,&apos;BST&apos;, IF( Division__c == &apos;99&apos;,&apos;Customer Support&apos;, &apos;&apos;))) ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doc_Type__c</fullName>
        <formula>IF( CGRP__c =&apos;57&apos;  &amp;&amp;  Sales_Org__c =&apos;3000&apos;,&apos;ZB2B&apos;,
IF( CGRP__c = &apos;77&apos;  &amp;&amp;  Sales_Org__c =&apos;5700&apos;,&apos;YB2B&apos;,
IF( CGRP__c  &lt;&gt; &apos;57&apos;  &amp;&amp;  Sales_Org__c =&apos;3000&apos;,&apos;ZQTA&apos;,
IF( CGRP__c  &lt;&gt; &apos;77&apos;  &amp;&amp;  Sales_Org__c =&apos;5700&apos;,&apos;YQTA&apos;,&apos;&apos;

)

)
)
)</formula>
        <label>Doc Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <inlineHelpText>Company Email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Insurance_Amount__c</fullName>
        <label>Insurance Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance_Type__c</fullName>
        <label>Insurance Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Validity__c</fullName>
        <label>Insurance Validity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Parent_Account__c</fullName>
        <formula>IF( 
 ISBLANK(ParentId )
, True, False)</formula>
        <inlineHelpText>This box is checked if Account does not have a Parent Account. This is used to identify parent accounts from child accounts such as stores.</inlineHelpText>
        <label>Is Parent Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MEC_Delivery_Site__c</fullName>
        <label>MEC Delivery Site</label>
        <picklist>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vitual warehouse code</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Support__c</fullName>
        <label>Marketing Support</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Contractual_Detials__c</fullName>
        <label>Other Contractual Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Over_Credit_Limit_Amount__c</fullName>
        <description>Shows by how much the Over Due is bigger than Credit Limit + Credit Note, otherwise shows 0</description>
        <formula>IF( 
(Credit_Limit__c  + Credit_Note__c  - (Over_Due__c  ))&lt;0, 
( Credit_Limit__c + Credit_Note__c - (Over_Due__c ))*(-1), 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Credit Limit + Credit Note)  - Over Due</inlineHelpText>
        <label>Over Credit Limit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Over_Due__c</fullName>
        <label>Over Due</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Box__c</fullName>
        <label>PO Box</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Validity__c</fullName>
        <inlineHelpText>Enter PO Validity standard number of days</inlineHelpText>
        <label>PO Validity (in days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Mother Company</description>
        <inlineHelpText>Mother Company</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_2__c</fullName>
        <label>Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_3__c</fullName>
        <label>Phone 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Progressive__c</fullName>
        <inlineHelpText>If Slabs are higher than the traget, to stretch sales to the upper limit</inlineHelpText>
        <label>Progressive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RG__c</fullName>
        <label>RG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Location_Code__c</fullName>
        <inlineHelpText>Hidden field, used to capture the Country Code from SAP</inlineHelpText>
        <label>Region Location Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Location__c</fullName>
        <label>Region Location</label>
        <picklist>
            <picklistValues>
                <fullName>Riyadh City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Riyadh Province</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Khobar City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Khobar Province</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeddah City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeddah Province</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mkh/Mdnh City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mkh/Mdnh Province</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAP_Classification__c</fullName>
        <label>SAP Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is the SAP Account ID / Customer Code</inlineHelpText>
        <label>SAP ID / Customer Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SAP_Price_List__c</fullName>
        <label>SAP Price List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Unique_Id_Formula__c</fullName>
        <formula>SAP_ID__c &amp; &apos;-&apos; &amp;  Sales_Org__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Unique Id Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>SAP Unique Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SGRP__c</fullName>
        <inlineHelpText>SAP Sales Group</inlineHelpText>
        <label>SAP SGRP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOff__c</fullName>
        <label>SAP Sales Office</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <label>Sales Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Game Dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Center Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Group_Description__c</fullName>
        <formula>IF( SGRP__c == &apos;510&apos;, &apos;DDS&apos;, IF( SGRP__c == &apos;520&apos;, &apos;Dealers&apos;, IF( SGRP__c == &apos;530&apos;, &apos;Showrooms&apos;, IF( SGRP__c == &apos;540&apos;, &apos;Power Retailers&apos;, IF( SGRP__c == &apos;550&apos;, &apos;Hypermarkets&apos;, IF( SGRP__c == &apos;560&apos;, &apos;IT Dealers&apos;, IF( SGRP__c == &apos;570&apos;, &apos;B2B&apos;, IF( SGRP__c == &apos;580&apos;, &apos;Game Dealers&apos;, IF( SGRP__c == &apos;590&apos;, &apos;SM DDS&apos;, IF( SGRP__c == &apos;600&apos;, &apos;SM Dealers&apos;, IF( SGRP__c == &apos;610&apos;, &apos;E Commerce&apos;, IF( SGRP__c == &apos;620&apos;, &apos;Employee Sales&apos;, IF( SGRP__c == &apos;630&apos;, &apos;Exports&apos;, IF( SGRP__c == &apos;640&apos;, &apos;Mobile Chains&apos;, IF( SGRP__c == &apos;990&apos;, &apos;Service Centers&apos;, &apos;&apos;)))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Group Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office_Description__c</fullName>
        <formula>IF( SOff__c == &apos;R010&apos;, &apos;Riyadh Office&apos;, IF( SOff__c == &apos;M010&apos;, &apos;Makkah/ Medina Office&apos;, IF( SOff__c == &apos;K010&apos;, &apos;Khober Office&apos;, IF( SOff__c == &apos;J010&apos;, &apos;Jeddah Office&apos;, IF( SOff__c == &apos;R040&apos;, &apos;Riyadh B2B Office&apos;, IF( SOff__c == &apos;M040&apos;, &apos;Makkah/ Medina B2B Office&apos;, IF( SOff__c == &apos;K040&apos;, &apos;Khober B2B Office&apos;, IF( SOff__c == &apos;J040&apos;, &apos;Jeddah B2B Office&apos;, &apos;&apos;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Office Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <formula>CASE( Sales_Org__c , &apos;3000&apos;, &apos;MEC&apos;, &apos;5700&apos;, &apos;FDC&apos;,&apos;&apos;)</formula>
        <label>Sales Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Comments__c</fullName>
        <label>Security Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Security_Issue_Date__c</fullName>
        <label>Security Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Security_Type__c</fullName>
        <label>Security Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Validity_Date__c</fullName>
        <label>Security Validity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Security_Value__c</fullName>
        <label>Security Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Region__c</fullName>
        <label>Shipping Region</label>
        <picklist>
            <picklistValues>
                <fullName>Riyadh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Khobar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeddah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Makkah/Madina</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Type__c</fullName>
        <label>Site Type</label>
        <picklist>
            <picklistValues>
                <fullName>Head Office &apos;HO&apos;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC-Warehouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>Warehouse__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Store_Location_Latitude__c</fullName>
        <label>Store Location Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Location_Link__c</fullName>
        <formula>&quot;http://maps.google.com/maps?q=&quot; &amp; Store_Location_Latitude__c &amp; Store_Location_Longitude__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store Location Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Location_Longitude__c</fullName>
        <label>Store Location Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Map_Display__c</fullName>
        <formula>HYPERLINK( Store_Location_Link__c,&quot;Click to Plot on Google Maps&quot; )</formula>
        <label>Store Map Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Map_Link__c</fullName>
        <label>Store Map Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Upload_Info__c</fullName>
        <description>To identify upload batch, this is internal and hidden</description>
        <inlineHelpText>To identify upload batch, this is internal and hidden</inlineHelpText>
        <label>Upload Info</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week_Start_Day__c</fullName>
        <label>Week Start Day</label>
        <picklist>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weekend_Day__c</fullName>
        <label>Weekend Day</label>
        <picklist>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Work_End_Hour__c</fullName>
        <label>Work End Hour</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>